# llm-qa-system

./: README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: DEPLOY.md
ml-inference/: Dockerfile  app.py  requirements.txt
rust-backend/: Cargo.toml  Dockerfile
rust-backend/src/: main.rs
scripts/: build_index.py
